# fine-ants

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  package-lock.json  pyproject.toml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20210328_1543.py  0003_auto_20210328_1703.py
backend/: Dockerfile  pyproject.toml
backend/fine_ants/: app.py  config.py  models.py  views.py
fine_ants/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  app2.js  gulpfile.js  index.html  main.css  main.css.map  package-lock.json  package.json  plugins.js  urls.py  views.py
frontend/assets/js/: main.js
frontend/assets/js/plugins/: testing.js
frontend/assets/sass/: main.scss
frontend/assets/sass/base/: _base.scss  _hbp5.scss
frontend/assets/sass/core/: _buttons.scss  _functions.scss  _helpers.scss  _mixins.scss  _settings.scss  _typography.scss
frontend/assets/sass/plugins/: _chartist.scss  _gravityforms.scss
frontend/assets/sass/theme/: _blog.scss  _content.scss  _footer.scss  _front-page.scss  _header.scss  _sidebar.scss
frontend/src/: App.vue  router.js
frontend/src/components/: DashboardLayout.vue  Header.vue  Sidebar.vue
frontend/src/views/: Accounts.vue  Dashboard.vue  Forms.vue  Login.vue  Modal.vue  Tables.vue
frontend/static/frontend/css/: main.css  main.css.map  main.min.css
frontend/static/frontend/js/: app.js  main.min.js  plugins.js  plugins.min.js  vendor.js
frontend/templates/frontend/: accounts.html  categories.html  dashboard.html  import.html  index.html  index2.html  profile.html  reports.html  table.html
nginx/: default.conf
